# action-forecast

./: .coderabbit.yaml  .deepsource.toml  .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yaml
.scannerwork/: report-task.txt
graphql/: main.py
nginx/: default.conf
profiling/: prof1.out  prof2.out
redis/: redis.conf
scripts/: test-harness.sh
src/forecast/: __main__.py  forecast.py  forecastapi.py  model.py  redis.py  redis_scripts.py
src/forecast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/forecast/graphql/: schema.py
src/graphql/: graph.py
src/model/: __main__.py  model.py
src/modeltf/: __main__.py  model.py
src/rest/: rest.py
tests/: conftest.py  test_forecast.py  test_forecastapi.py  test_integration.py  test_model.py  test_redis.py
