# Guide (user-friendly):
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast"

# Versions should comply with PEP 440:
# https://www.python.org/dev/peps/pep-0440/

version = "1.0.0"
description = "Action Forecast"
readme = "README.md"

requires-python = ">=3.8"

# license = {file = "LICENSE.txt"}

keywords = ["actionforecast", "setuptools", "development"]

authors = [
  {name = "Sean", email = "seansamu.code@gmail.com" }
]
maintainers = [
  {name = "Sean", email = "seansamu.code@gmail.com" }
]

dependencies = [
  "pytest == 6.2.5",
  "numpy>=1.23.5; python_version<'3.12'",
  "pandas>=2.1.2; python_version<'3.12'",
  "pytz==2024.1",
  "annotated-types==0.7.0",
  "anyio==4.4.0",
  "certifi==2024.7.4",
  "click==8.1.7",
  "dnspython==2.6.1",
  "email_validator==2.2.0",
  "exceptiongroup==1.2.2",
  "fastapi==0.111.1",
  "fastapi-cli==0.0.4",
  "h11==0.14.0",
  "httpcore==1.0.5",
  "httptools==0.6.1",
  "httpx==0.27.0",
  "idna==3.7",
  "Jinja2==3.1.4",
  "joblib==1.4.2",
  "numpy==2.0.1",
  "memory-profiler==0.61.0",
  "markdown-it-py==3.0.0",
  "MarkupSafe==2.1.5",
  "mdurl==0.1.2",
  "pandas==2.2.2",
  "pathlib==1.0.1",
  "pydantic==2.8.2",
  "pydantic_core==2.20.1",
  "Pygments==2.18.0",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.9",
  "PyYAML==6.0.1",
  "redis==5.0.8",
  "requests==2.32.3",
  "rich==13.7.1",
  "scikit-learn==1.5.1",
  "scipy==1.14.0",
  "shellingham==1.5.4",
  "snakeviz==2.2.0",
  "sniffio==1.3.1",
  "starlette==0.37.2",
  "strawberry-graphql==0.243.1",
  "threadpoolctl==3.5.0",
  "typer==0.12.3",
  "typing_extensions==4.12.2",
  "uuid==1.30",
  "uvicorn==0.30.1",
  "uvloop==0.19.0",
  "watchfiles==0.22.0",
  "websockets==12.0"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.scripts]
forecast = "forecast.__main__:main"
forecastapi = "forecast.__main__:api"
forecastmodel = "model.__main__:main"

[project.urls]
Homepage = "https://github.com/SeanS-code/action-forecast"
Issues = "https://github.com/SeanS-code/action-forecast/issues"

# https://ichard26-testblackdocs.readthedocs.io/en/refactor_docs/pyproject_toml.html#configuration-format
# https://github.com/psf/black/blob/main/pyproject.toml
# https://sources.debian.org/src/aiodogstatsd/0.16.0-2/pyproject.toml/

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling

  # The following are specific to project
  | bin
  | data
  | scripts
  | docs
  | logs
  | tests
  | <-SEAN->.egg-info
  | wily
  | work
  | __pycache__

)/
'''

# [tool.isort]
# profile = "black"
# src_paths = "src/<-SEAN->"
# skip_glob = "^(<-SEAN->)"

# [tool.isort]
# line_length = 100
# multi_line_output = 3
# include_trailing_comma = true
# known_third_party = ['celery', 'requests']

[tool.flake8]
max-line-length = 100
max-complexity = 18
select = "B,C,E,F,W,T4,B9"
ignore = "E203, E266, E501, W503, F403, F401"
